2004-07-30  Han-Wen Nienhuys   <hanwen@xs4all.nl>

	* VERSION: 2.3.9 released.

	* scripts/convert-ly.py (conv): remove \lyrics from \lyricsto.

	* ly/gregorian-init.ly (neumeDemoPaper): remove duplication from
	manual.

	* Documentation/user/tutorial.itely (Integrating text and music):
	remove \score and \notes from manual.

	* lily/my-lily-lexer.cc (My_lily_lexer): really switch on note
	mode in the beginning.

2004-07-30  Mats Bengtsson  <mabe@drongo.s3.kth.se>

	* Documentation/user/changing-defaults.itely (Horizontal spacing):
	Correct the documentation of the spacing parameters. 

	* Documentation/user/tutorial.itely (Integrating text and music), 
	Documentation/user/lilypond-book.itely (Integrating LaTeX and
	music): Document that you need to add the map file ec-mftrace.map
	in the dvips command. 	

2004-07-30  Han-Wen Nienhuys   <hanwen@xs4all.nl>

	* lily/score-engraver.cc (initialize): abort if ecrm10.pfa not
	found.

	* lily/text-item.cc (interpret_string): insert encoding setting
	here

	* scm/framework-ps.scm (ps-font-command): remove feta/parmesan
	encoding kludge.

	* Documentation/user/changing-defaults.itely (Text encoding): node
	on encoding.

	* lily/lyric-engraver.cc (try_music): remove superfluous check.

	* lily/book-paper-def.cc (find_scaled_font): remove default
	encoding, because it messes up font loading for feta and
	parmesan. Encoding should only be specified for running texts.

	* lily/modified-font-metric.cc (text_dimension): support coding
	scheme ""
	
2004-07-28  Han-Wen Nienhuys   <hanwen@xs4all.nl>

	* lily/tie-engraver.cc (stop_translation_timestep): remember tie
	definition, so \override works as expected.

	* lily/measure-grouping-engraver.cc: clarify

2004-07-27  Han-Wen Nienhuys   <hanwen@xs4all.nl>

	* lily/parser.yy (context_def_mod): remove \consistsend

	* lily/context-def.cc (instantiate): use Translator::must_be_last
	to determine engraver order.

	* lily/translator.cc (must_be_last): new function
